--- a/components/header/Header.module.scss
+++ b/components/header/Header.module.scss
@@ -106,9 +106,15 @@
   &__mail {
    justify-content: space-between;
     display: flex;
-    gap: 25px;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
     margin-left: auto;
+    line-height: 14px;
+    margin-right: 30px;
+
+    @include media-mobile {
+      margin-right: 10px;
+    }
   }
 
   &__bottomMenu {
